<resources>
    <string name="app_name">Capstone Project</string>
    <string name="content_authority">com.jraw.android.capstoneproject</string>
    <string name="welcome">Welcome to Capstone Project</string>

    <string name="action_settings">Settings</string>
    <string name="action_new_contact">New Contact</string>

    <string name="error_message">Problem getting data</string>
    <string name="error_message_records">No records found</string>

    <string name="msgs_image_view_cd">Msgs Image View</string>
    <string name="search_bar_search_by_content_hint">"Search by content&#8230;"</string>

    <string name="title_activity_conversations">Conversations</string>
    <string name="title_activity_msgs">Msgs</string>
    <string name="title_activity_contacts">Contacts</string>

    <string name="conversations_search_item_title">Conversations Search</string>
    <string name="conversations_search_by_title_hint">"Search by title&#8230;"</string>
    <string name="conversations_default_unread_count">"0"</string>

    <string name="main_button_title">"Please select from the following options: "</string>
    <string name="main_button_conversations">Conversations</string>
    <string name="main_button_contacts">Contacts</string>

    <string name="new_conversation_title">"Enter title:"</string>
    <string name="new_conversation_button_title">Press button to add contact to conversation</string>
    <string name="new_conversation_contacts_title">"Contacts added: "</string>
    <string name="new_conversation_empty_conv_message">Please fulfill Conversation requirements!</string>

    <string name="notification_new_msg_received">New Message!</string>

    <string name="send_msg">Send</string>
    <string name="enter_message_hint">Enter message&#8230;</string>
    <string name="save">Save</string>
    <string name="save_successful">Save successful</string>
    <string name="problem_saving">Problem saving</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="send_msg_error">Problem sending message!</string>
    <string name="new_contact">New Contact</string>

    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="tel_num">Tel num</string>

    <string name="new_contact_empty_error">Please enter a name and tel number</string>

    <string name="install_error_msg">Error installing</string>
    <string name="install_unsuccessful_msg">Server problem whilst installing</string>
    <string name="user_wrong_install_entry">Please enter details</string>

    <string name="widget_default_title">No conversation available</string>

    <string name="notification_unread_msgs">new unread messages</string>
    <string name="channel_name">Capstone Channel</string>
    <string name="channel_description">Channel Desc</string>

    <string name="problem_getting_new_msg">Problem getting new msgs</string>
</resources>
