<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jraw.android.capstoneproject.ui.newcontact.NewContactFragment">

    <EditText
        android:id="@+id/fragment_new_contact_first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:focusable="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/fragment_new_contact_tel_num_et"
        android:layout_margin="4dp"/>

    <EditText
        android:id="@+id/fragment_new_contact_surname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/fragment_new_contact_tel_num_et"
        android:layout_margin="4dp"/>

    <EditText
        android:id="@+id/fragment_new_contact_tel_num_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="phone"
        android:hint="@string/tel_num"
        android:imeOptions="actionDone"
        android:layout_margin="4dp"/>

</FrameLayout>
