<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jraw.android.capstoneproject.ui.install.InstallFragment">

    <com.jraw.android.capstoneproject.utils.customviews.CloseOnUnFocusET
        android:id="@+id/fragment_install_first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:focusable="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/fragment_install_tel_num_et"
        android:layout_margin="4dp"/>

    <com.jraw.android.capstoneproject.utils.customviews.CloseOnUnFocusET
        android:id="@+id/fragment_install_surname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/fragment_install_tel_num_et"
        android:layout_margin="4dp"/>

    <com.jraw.android.capstoneproject.utils.customviews.CloseOnUnFocusET
        android:id="@+id/fragment_install_tel_num_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="phone"
        android:hint="@string/tel_num"
        android:imeOptions="actionDone"
        android:layout_margin="4dp"/>

</LinearLayout>
