<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jraw.android.capstoneproject.ui.newconversation.NewConversationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_new_conversation_buttons_rl"
        android:orientation="vertical"
        android:weightSum="1">

        <com.jraw.android.capstoneproject.utils.customviews.CloseOnUnFocusET
            android:id="@+id/fragment_new_conversation_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:hint="@string/new_conversation_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:background="@android:color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_new_conversation_added_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:descendantFocusability="afterDescendants"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:background="@android:color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_new_conversation_persons_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".80"
            android:descendantFocusability="afterDescendants"
            android:focusable="true" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_new_conversation_buttons_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/fragment_new_conversation_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/fragment_new_conversation_cancel_button"
            android:background="@drawable/list_item_touch_selector"
            android:text="@string/create" />

        <Button
            android:id="@+id/fragment_new_conversation_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/list_item_touch_selector"
            android:text="@string/cancel" />

    </RelativeLayout>

</RelativeLayout>
